--- a/src/componentes/Calculadora.css
+++ b/src/componentes/Calculadora.css
@@ -60,8 +60,10 @@ footer a{
 
  
  
- @media only screen and (min-width: 480px) and (max-width: 960px) {
-     
+ @media only screen and (max-width: 480px)  {
+     footer p{
+        font-size: 12px;
+     }
  }
  
  @media only screen and (min-width: 780px) and (max-width:1200px) {
